# Vennie

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  exceptions.py  routes.py
backend/app/services/: geocoding_service.py  police_stats_service.py
backend/postman/: Vennie.postman_collection.json
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx
frontend/src/app/providers/: ReactQueryProvider.tsx  ToastProvider.tsx
frontend/src/entities/crime/api/: fetchCrimeStats.ts  geocode.ts
frontend/src/entities/crime/model/: types.ts  useCrimeStats.ts
frontend/src/features/crime-chart/ui/: CrimeChart.tsx
frontend/src/features/crime-search/model/: useCrimeForm.ts  useCrimeStats.ts
frontend/src/features/crime-search/ui/: AddressForm.tsx
frontend/src/pages/CrimePage/: CrimePage.tsx  ui.tsx
frontend/src/shared/config/: env.ts
frontend/src/shared/lib/: axios.ts  queryClient.ts
